--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="0.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-insomnia"
-        version="4.3.1">
+        version="4.3.0">
 
   <name>Insomnia (prevent screen sleep)</name>
 
@@ -13,11 +13,11 @@
   <license>MIT</license>
 
   <engines>
-    <engine name="cordova" version=">=3.0.0"/>
+    <engine name="cordova" version=">=7.0.0"/>
   </engines>
 
   <js-module src="www/Insomnia.js" name="Insomnia">
-    <clobbers target="window.insomnia" />
+    <clobbers target="window.plugins.insomnia" />
   </js-module>
 
   <platform name="ios">
@@ -27,48 +27,18 @@
         <param name="ios-package" value="Insomnia"/>
       </feature>
     </config-file>
-
-    <header-file src="src/ios/Insomnia.h"/>
-    <source-file src="src/ios/Insomnia.m"/>
+    <source-file src="src/ios/Insomnia.swift" />
+    <dependency id="cordova-plugin-add-swift-support" version="^2.0.2"/>
   </platform>
 
-    <platform name="wp8">
-        <config-file target="config.xml" parent="/*">
-            <feature name="Insomnia">
-                <param name="wp-package" value="Insomnia"/>
-            </feature>
-        </config-file>
-
-        <source-file src="src/wp8/Insomnia.cs" />
-    </platform>
 
   <platform name="android">
-
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="Insomnia">
-        <param name="android-package" value="nl.xservices.plugins.Insomnia" />
+        <param name="android-package" value="tombola.plugins.Insomnia" />
       </feature>
     </config-file>
-
-    <source-file src="src/android/nl/xservices/plugins/Insomnia.java" target-dir="src/nl/xservices/plugins"/>
+    <source-file src="src/android/Insomnia.java" target-dir="src/tombola/plugins"/>
   </platform>
-
-  <platform name="browser">
-    <js-module src="src/browser/Insomnia.js" name="InsomniaProxy">
-      <merges target="window.plugins.insomnia" />
-    </js-module>
-  </platform>
-
-  <platform name="firefoxos">
-    <js-module src="src/firefoxos/insomnia.js" name="InsomniaProxy">
-      <runs />
-    </js-module>
-  </platform>
-  
-  <platform name="windows">
-    <js-module src="src/windows/InsomniaProxy.js" name="InsomniaProxy">
-      <runs />
-    </js-module>
-  </platform>  
 
 </plugin>
